so far got everything styled correctly and handled all bugs/ still the modal isnt working and too many api calls in console

--- a/amc-alternative/package.json
+++ b/amc-alternative/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.20",
+    "@mui/x-data-grid": "^6.18.3",
+    "mui": "^0.0.1",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.48.2",
     "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
