--- a/amc-alternative/package.json
+++ b/amc-alternative/package.json
@@ -13,12 +13,14 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.20",
     "@mui/x-data-grid": "^6.18.3",
+    "firebase": "^10.7.2",
     "mui": "^0.0.1",
-    "next": "14.0.3",
+    "next": "^14.1.0",
     "react": "^18",
-    "react-dom": "^18",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
-    "react-router-dom": "^6.20.1"
+    "react-router-dom": "^6.20.1",
+    "react-toastify": "^10.0.4"
   },
   "devDependencies": {
     "@types/node": "^20",
