--- a/amc-alternative/package.json
+++ b/amc-alternative/package.json
@@ -19,6 +19,7 @@
     "react": "^18",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.20.1",
     "react-toastify": "^10.0.4"
   },
